--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -13,6 +13,10 @@ label = Author
 type = string
 width = 1/2
 
+[fields.featured]
+label = Featured Image
+type = flow
+
 [fields.twitter_handle]
 label = Twitter Handle
 type = string
