Tutorials and CSS Adjustments.

--- a/flowblocks/general.ini
+++ b/flowblocks/general.ini
@@ -1,10 +1,10 @@
 [block]
 name = Text Block
-button_label = Extras
+button_label = Img
 
-[fields.text]
-label = Text
-type = markdown
+[fields.image]
+label = Image
+type = text
 
 [fields.class]
 label = Class
