--- a/models/scribble.ini
+++ b/models/scribble.ini
@@ -1,5 +1,5 @@
 [model]
-name = Blog Post
+name = Scribble
 label = {{ this.title }}
 hidden = yes
 
@@ -8,16 +8,17 @@ label = Title
 type = string
 size = large
 
-[fields.featured]
-label = Featured Image
-type = flow
-flow_blocks = general
+[fields.link]
+label = Link
+type = string
+size = large
+
+[fields.notes]
+label = Notes
+type = string
+width = large
 
 [fields.pub_date]
 label = Publication date
 type = date
 width = 1/4
-
-[fields.body]
-label = Body
-type = markdown
