Content and Formatting.

--- a/models/lesson.ini
+++ b/models/lesson.ini
@@ -1,6 +1,6 @@
 [model]
-name = Guide Entry
-label = {{ this.name }}
+name = Lesson
+label = {{ this.title }}
 hidden = yes
 
 [attachments]
@@ -27,4 +27,3 @@ type = sort_key
 [fields.content]
 label = Content
 type = markdown
-
