--- a/models/tutorial.ini
+++ b/models/tutorial.ini
@@ -1,6 +1,6 @@
 [model]
 name = Tutorial
-label = {{ this.name }}
+label = {{ this.title }}
 hidden = yes
 
 [attachments]
@@ -26,5 +26,5 @@ label = Description
 type = markdown
 
 [children]
-model = class
+model = lesson
 order_by = sort_key
